AWS_Demo/22-deployBasicRDS/vpc.tf
resource "aws_vpc" "vpc-01" {
  cidr_block = "10.0.0.0/16"
  enable_dns_hostnames = true
  enable_dns_support = true
  
  tags = {
    Name = "vpc-01"
  }
}
